# enigma-simulator

./: CMakeLists.txt  ReadMe.md  conversions.c  conversions.h  main.c  rotors.c  rotors.h  textWrap.c  textWrap.h
docs/: EnigmaSim.js  EnigmaSim.wasm  index.html
